[gd_scene load_steps=18 format=2]

[ext_resource path="res://others/fonts/A Dripping Marker.ttf" type="DynamicFontData" id=1]
[ext_resource path="res://main_menu_image2.png" type="Texture" id=2]
[ext_resource path="res://others/grudgefights/textures/fight5.png" type="Texture" id=3]
[ext_resource path="res://others/grudgefights/textures/fight3.png" type="Texture" id=4]
[ext_resource path="res://others/grudgefights/textures/fight2.png" type="Texture" id=5]
[ext_resource path="res://others/grudgefights/textures/fight1.png" type="Texture" id=6]
[ext_resource path="res://others/grudgefights/textures/fight4.png" type="Texture" id=7]
[ext_resource path="res://others/grudgefights/GrudgeFightSelect.gd" type="Script" id=8]

[sub_resource type="StyleBoxFlat" id=1]
bg_color = Color( 1, 1, 1, 1 )
corner_radius_top_left = 10
corner_radius_top_right = 10
corner_radius_bottom_right = 10
corner_radius_bottom_left = 10

[sub_resource type="StyleBoxFlat" id=2]
bg_color = Color( 0.419608, 0.603922, 0.352941, 1 )
corner_radius_top_left = 10
corner_radius_top_right = 10
corner_radius_bottom_right = 10
corner_radius_bottom_left = 10

[sub_resource type="StyleBoxFlat" id=3]
bg_color = Color( 0, 0, 0, 0.490196 )
corner_radius_top_left = 10
corner_radius_top_right = 10
corner_radius_bottom_right = 10
corner_radius_bottom_left = 10

[sub_resource type="DynamicFont" id=4]
size = 24
outline_size = 1
outline_color = Color( 0.419608, 0.603922, 0.352941, 1 )
font_data = ExtResource( 1 )

[sub_resource type="StyleBoxFlat" id=5]
bg_color = Color( 0.419608, 0.603922, 0.352941, 1 )

[sub_resource type="StyleBoxFlat" id=6]
bg_color = Color( 0, 0, 0, 0.490196 )
corner_radius_top_right = 40
corner_radius_bottom_right = 40

[sub_resource type="DynamicFont" id=7]
size = 40
outline_size = 1
outline_color = Color( 0, 0, 0, 1 )
font_data = ExtResource( 1 )

[sub_resource type="StyleBoxFlat" id=8]
bg_color = Color( 0, 0, 0, 0.490196 )
corner_radius_bottom_right = 40
corner_radius_bottom_left = 40

[sub_resource type="DynamicFont" id=9]
size = 40
outline_size = 3
outline_color = Color( 0.419608, 0.603922, 0.352941, 1 )
font_data = ExtResource( 1 )

[node name="GrudgeFightSelect" type="TextureRect"]
self_modulate = Color( 0.635294, 0.635294, 0.635294, 1 )
anchor_right = 1.0
anchor_bottom = 1.0
texture = ExtResource( 2 )
expand = true
script = ExtResource( 8 )
__meta__ = {
"_edit_use_anchors_": false
}

[node name="HBoxContainer" type="HBoxContainer" parent="."]
anchor_right = 1.0
anchor_bottom = 1.0
__meta__ = {
"_edit_use_anchors_": false
}

[node name="Control" type="Control" parent="HBoxContainer"]
margin_right = 160.0
margin_bottom = 720.0
rect_min_size = Vector2( 160, 0 )

[node name="MarginContainer" type="MarginContainer" parent="HBoxContainer/Control"]
margin_right = 110.0
margin_bottom = 40.0
rect_min_size = Vector2( 110, 0 )
custom_constants/margin_top = 5
custom_constants/margin_left = 5
__meta__ = {
"_edit_use_anchors_": false
}

[node name="BackButton" type="Button" parent="HBoxContainer/Control/MarginContainer"]
margin_left = 5.0
margin_top = 5.0
margin_right = 110.0
margin_bottom = 40.0
rect_min_size = Vector2( 50, 30 )
custom_styles/hover = SubResource( 1 )
custom_styles/pressed = SubResource( 2 )
custom_styles/normal = SubResource( 3 )
custom_fonts/font = SubResource( 4 )
text = "back"
__meta__ = {
"_edit_use_anchors_": false
}

[node name="VBoxContainer" type="VBoxContainer" parent="HBoxContainer"]
margin_left = 164.0
margin_right = 764.0
margin_bottom = 720.0

[node name="Control" type="Control" parent="HBoxContainer/VBoxContainer"]
margin_right = 600.0
margin_bottom = 106.0
rect_min_size = Vector2( 0, 60 )
size_flags_vertical = 3

[node name="ItemList" type="ItemList" parent="HBoxContainer/VBoxContainer"]
margin_top = 110.0
margin_right = 600.0
margin_bottom = 610.0
rect_min_size = Vector2( 600, 500 )
custom_styles/selected_focus = SubResource( 5 )
custom_styles/selected = SubResource( 5 )
custom_styles/bg = SubResource( 6 )
custom_fonts/font = SubResource( 7 )
custom_colors/font_color = Color( 1, 1, 1, 1 )
custom_constants/icon_margin = 30
items = [ "Amaechi vs Wike", ExtResource( 6 ), false, "Reno vs Buratai", ExtResource( 7 ), false, "Lazy youth vs PMB", ExtResource( 5 ), false, "Yahoo boy vs F Sars", ExtResource( 3 ), false, "Nnamdi vs PMB", ExtResource( 4 ), false ]
max_columns = 2
__meta__ = {
"_edit_use_anchors_": false
}

[node name="Control2" type="Control" parent="HBoxContainer/VBoxContainer"]
margin_top = 614.0
margin_right = 600.0
margin_bottom = 720.0
size_flags_vertical = 3

[node name="Control2" type="Control" parent="HBoxContainer"]
margin_left = 768.0
margin_right = 1280.0
margin_bottom = 720.0
rect_min_size = Vector2( 100, 0 )
size_flags_horizontal = 3
size_flags_vertical = 3

[node name="MarginContainer" type="MarginContainer" parent="HBoxContainer/Control2"]
anchor_left = 1.0
anchor_top = 1.0
anchor_right = 1.0
anchor_bottom = 1.0
margin_left = -150.0
margin_top = -40.0
rect_min_size = Vector2( 150, 0 )
custom_constants/margin_right = 5
custom_constants/margin_bottom = 5
__meta__ = {
"_edit_use_anchors_": false
}

[node name="StartButton" type="Button" parent="HBoxContainer/Control2/MarginContainer"]
margin_right = 145.0
margin_bottom = 35.0
rect_min_size = Vector2( 70, 30 )
custom_styles/hover = SubResource( 1 )
custom_styles/pressed = SubResource( 2 )
custom_styles/normal = SubResource( 3 )
custom_fonts/font = SubResource( 4 )
custom_colors/font_color = Color( 0.780392, 0.780392, 0.780392, 1 )
text = "Go"
__meta__ = {
"_edit_use_anchors_": false
}

[node name="Label" type="Label" parent="HBoxContainer/Control2"]
anchor_left = 0.5
anchor_right = 0.5
margin_left = -120.0
margin_right = 120.0
margin_bottom = 400.0
rect_min_size = Vector2( 240, 400 )
custom_styles/normal = SubResource( 8 )
custom_fonts/font = SubResource( 9 )
custom_colors/font_color = Color( 0, 0, 0, 1 )
text = "Naija
Kombat"
align = 1
valign = 1
__meta__ = {
"_edit_use_anchors_": false
}

[connection signal="pressed" from="HBoxContainer/Control/MarginContainer/BackButton" to="." method="_on_BackButton_pressed"]
[connection signal="item_selected" from="HBoxContainer/VBoxContainer/ItemList" to="." method="_on_ItemList_item_selected"]
[connection signal="pressed" from="HBoxContainer/Control2/MarginContainer/StartButton" to="." method="_on_StartButton_pressed"]
